samples/_failures_safe/1761351570_6371c1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_631b3c02.c: In function ‘main’:
./samples/SAFE/__tmp_631b3c02.c:134:19: error: expected ‘;’ at end of input
  134 |             printf
      |                   ^
      |                   ;
./samples/SAFE/__tmp_631b3c02.c:134:13: error: expected declaration or statement at end of input
  134 |             printf
      |             ^~~~~~
./samples/SAFE/__tmp_631b3c02.c:134:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_631b3c02.c:134:13: error: expected declaration or statement at end of input
